-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8.4, 6.9.1, 6.10
-
None
-
-
18a6dc5cf (dev), def384b2e (6.10), 92726f1c9 (6.9), c6684fb6c (tqtc/lts-6.8)
5.15 Qt for VxWorks had EDOOM handling fix:
https://bugreports.qt.io/browse/QTBUG-106117
which is missing from 6.x
| For Gerrit Dashboard: QTBUG-138831 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 664928,2 | Add EDOOM handling to VxWorks | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 665265,2 | Add EDOOM handling to VxWorks | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 665376,2 | Add EDOOM handling to VxWorks | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 665786,2 | Add EDOOM handling to VxWorks | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |